// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page basic 1`] = `
<div>
  <div
    class="flex gap-4 flex-col"
  >
    <nav
      class="ant-breadcrumb min-h-[22px] mb-4"
    >
      <ol />
    </nav>
    <div
      class="p-4 bg-white rounded-lg"
    />
  </div>
</div>
`;

exports[`Page breadcrumb match menu 1`] = `
<div>
  <div
    class="flex gap-4 flex-col"
  >
    <nav
      class="ant-breadcrumb min-h-[22px] mb-4"
    >
      <ol>
        <li>
          <a
            href="/admin"
          >
            首页
          </a>
        </li>
        <li
          aria-hidden="true"
          class="ant-breadcrumb-separator"
        >
          /
        </li>
        <li>
          <a
            href="/admin/test"
          >
            Test Page
          </a>
        </li>
        <li
          aria-hidden="true"
          class="ant-breadcrumb-separator"
        >
          /
        </li>
        <li>
          Child Page
        </li>
      </ol>
    </nav>
    <div
      class="p-4 bg-white rounded-lg"
    />
  </div>
</div>
`;

exports[`Page page with css props 1`] = `
<div>
  <div
    class="flex gap-4 flex-col"
  >
    <nav
      class="ant-breadcrumb min-h-[22px] mb-4"
    >
      <ol />
    </nav>
    <div
      class="p-4 bg-white rounded-lg"
      mb="2"
    />
  </div>
</div>
`;
